# File_Transfer_Client_Project_Cpp

./: CMakeLists.txt  Client.cpp  File_Transfer_Client_Project_Cpp.cpp  README.md
include/: cli.h  encryption_handler.hpp  file_transfer_client.h  network_connection.h  packet_def.hpp  packet_helper.hpp  path_resolver.h  progressbar_manager.h  session_manager.h
src/: file_transfer_client.cpp  network_connection.cpp  path_resolver.cpp  session_manager.cpp
